<resources>
    <string name="app_name">Math Tutor</string>
    <string name="start">Start Quiz</string>
    <string name="math_tutor">Math Tutor</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="button_4">Button</string>
    <string name="button_2">Button</string>
    <string name="button_3">Button</string>
    <string name="go_next">Go Next</string>
    <string name="start_over">Start Over</string>
</resources>