<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CEEAE8"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_start"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="213dp"
        android:layout_height="59dp"
        android:background="@drawable/custom_next"
        android:text="@string/start"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/textView_label"
        android:layout_width="306dp"
        android:layout_height="62dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/math_tutor"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/red"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="376dp"
        android:layout_height="390dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901"
        app:srcCompat="@drawable/matht" />


</androidx.constraintlayout.widget.ConstraintLayout>